infrastructure/services/dev/policies/tests/workloads/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: preview-pr-12
  name: good
spec:
  priorityClassName: dev-preview
  containers:
  - name: app
    image: nginx
  nodeSelector:
    kubernetes.io/arch: amd64
---
apiVersion: v1
kind: Pod
metadata:
  namespace: preview-pr-13
  name: no-guardrails
spec:
  priorityClassName: dev-preview
  containers:
  - name: app
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  namespace: preview-pr-12
  name: host-network
spec:
  priorityClassName: dev-preview
  containers:
  - name: app
    image: nginx
  hostNetwork: true
---
apiVersion: v1
kind: Pod
metadata:
  namespace: preview-pr-12
  name: host-pid
spec:
  priorityClassName: dev-preview
  containers:
  - name: app
    image: nginx
  hostPID: true
---
apiVersion: v1
kind: Pod
metadata:
  namespace: preview-pr-12
  name: host-path
spec:
  priorityClassName: dev-preview
  containers:
  - name: app
    image: nginx
  volumes:
  - name: h
    hostPath:
      path: /
---
apiVersion: v1
kind: Pod
metadata:
  namespace: preview-pr-12
  name: privileged
spec:
  priorityClassName: dev-preview
  containers:
  - name: app
    image: nginx
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  namespace: preview-pr-12
  name: privileged-init
spec:
  priorityClassName: dev-preview
  containers:
  - name: app
    image: nginx
  initContainers:
  - name: init
    image: busybox
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  namespace: preview-pr-12
  name: node-name
spec:
  priorityClassName: dev-preview
  containers:
  - name: app
    image: nginx
  nodeName: staging-controlplane-1
---
apiVersion: v1
kind: Pod
metadata:
  namespace: preview-pr-12
  name: node-selector-hostname
spec:
  priorityClassName: dev-preview
  containers:
  - name: app
    image: nginx
  nodeSelector:
    kubernetes.io/hostname: staging-controlplane-1
---
apiVersion: v1
kind: Pod
metadata:
  namespace: preview-pr-12
  name: required-affinity
spec:
  priorityClassName: dev-preview
  containers:
  - name: app
    image: nginx
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/hostname
            operator: In
            values:
            - x
---
apiVersion: v1
kind: Pod
metadata:
  namespace: preview-pr-12
  name: wrong-priority
spec:
  priorityClassName: system-node-critical
  containers:
  - name: app
    image: nginx
