infrastructure/services/dev/policies/tests/workloads/cluster.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: ClusterResource
metadata:
  name: cluster
spec:
  resources:
  - apiVersion: v1
    kind: Namespace
    metadata:
      name: preview-pr-12
      labels:
        preview.eliorion.fr/tier: preview
        preview.eliorion.fr/pr: '12'
  - apiVersion: v1
    kind: Namespace
    metadata:
      name: preview-pr-13
      labels:
        preview.eliorion.fr/tier: preview
        preview.eliorion.fr/pr: '13'
  - apiVersion: v1
    kind: ResourceQuota
    metadata:
      name: preview-quota
      namespace: preview-pr-12
  - apiVersion: networking.k8s.io/v1
    kind: NetworkPolicy
    metadata:
      name: default-deny
      namespace: preview-pr-12
